Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -142254,5 +142254,383 @@
     "PPS": 1.0259695384703515,
     "VAULT_PNL_SPOT": 11755.094922999968,
     "FUEL": 2780244
+  },
+  "2025-05-31 00:30": {
+    "LTVL": 554725.559433,
+    "TVL_USD": 523128.44787599996,
+    "TVL_TOKEN": 523206.3009735848,
+    "SHARES": 510973.595591,
+    "PPS": 1.0239399951154742,
+    "VAULT_PNL_SPOT": 11755.094922999968,
+    "FUEL": 2780244
+  },
+  "2025-05-31 00:40": {
+    "LTVL": 556489.755572,
+    "TVL_USD": 522270.62735200004,
+    "TVL_TOKEN": 522348.72893395025,
+    "SHARES": 510973.595591,
+    "PPS": 1.0222616852242503,
+    "VAULT_PNL_SPOT": 11755.094922999968,
+    "FUEL": 2780244
+  },
+  "2025-05-31 00:50": {
+    "LTVL": 556698.564106,
+    "TVL_USD": 523282.72643599997,
+    "TVL_TOKEN": 523347.08242672594,
+    "SHARES": 510973.595591,
+    "PPS": 1.0242155112171982,
+    "VAULT_PNL_SPOT": 11755.094922999968,
+    "FUEL": 2780244
+  },
+  "2025-05-31 01:00": {
+    "LTVL": 555662.552681,
+    "TVL_USD": 523484.870389,
+    "TVL_TOKEN": 523563.9913793772,
+    "SHARES": 510973.595591,
+    "PPS": 1.024640012511439,
+    "VAULT_PNL_SPOT": 11755.094922999968,
+    "FUEL": 2780244
+  },
+  "2025-05-31 01:10": {
+    "LTVL": 554712.721216,
+    "TVL_USD": 523429.98410199996,
+    "TVL_TOKEN": 523505.096613262,
+    "SHARES": 510973.595591,
+    "PPS": 1.0245247526102947,
+    "VAULT_PNL_SPOT": 12001.627400239406,
+    "FUEL": 2780244
+  },
+  "2025-05-31 01:20": {
+    "LTVL": 556014.12424,
+    "TVL_USD": 522740.174395,
+    "TVL_TOKEN": 522816.536978391,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231772081563104,
+    "VAULT_PNL_SPOT": 12001.627400239406,
+    "FUEL": 2780244
+  },
+  "2025-05-31 01:30": {
+    "LTVL": 554580.657748,
+    "TVL_USD": 523322.237769,
+    "TVL_TOKEN": 523407.1710506464,
+    "SHARES": 510973.595591,
+    "PPS": 1.0243331075557154,
+    "VAULT_PNL_SPOT": 12001.627400239406,
+    "FUEL": 2780244
+  },
+  "2025-05-31 01:40": {
+    "LTVL": 553311.705248,
+    "TVL_USD": 523363.06399999995,
+    "TVL_TOKEN": 523439.2610532315,
+    "SHARES": 510973.595591,
+    "PPS": 1.0243959092403072,
+    "VAULT_PNL_SPOT": 12152.752015999984,
+    "FUEL": 2780244
+  },
+  "2025-05-31 01:50": {
+    "LTVL": 552131.020028,
+    "TVL_USD": 523652.91732,
+    "TVL_TOKEN": 523729.34514333674,
+    "SHARES": 510973.595591,
+    "PPS": 1.02496361781196,
+    "VAULT_PNL_SPOT": 12152.752015999984,
+    "FUEL": 2780244
+  },
+  "2025-05-31 02:00": {
+    "LTVL": 551570.390817,
+    "TVL_USD": 523413.581999,
+    "TVL_TOKEN": 523489.74452193046,
+    "SHARES": 510973.595591,
+    "PPS": 1.024494707826251,
+    "VAULT_PNL_SPOT": 12152.752015999984,
+    "FUEL": 2786973
+  },
+  "2025-05-31 02:10": {
+    "LTVL": 552329.395768,
+    "TVL_USD": 522133.494786,
+    "TVL_TOKEN": 522209.585944768,
+    "SHARES": 510973.595591,
+    "PPS": 1.0219893756756104,
+    "VAULT_PNL_SPOT": 11313.864376000012,
+    "FUEL": 2786973
+  },
+  "2025-05-31 02:20": {
+    "LTVL": 553834.996937,
+    "TVL_USD": 522611.61325600004,
+    "TVL_TOKEN": 522685.00868491956,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229198009348681,
+    "VAULT_PNL_SPOT": 11313.864376000012,
+    "FUEL": 2786973
+  },
+  "2025-05-31 02:30": {
+    "LTVL": 552917.502051,
+    "TVL_USD": 523306.26324700005,
+    "TVL_TOKEN": 523383.0016627038,
+    "SHARES": 510973.595591,
+    "PPS": 1.0242858068964422,
+    "VAULT_PNL_SPOT": 11313.864376000012,
+    "FUEL": 2786973
+  },
+  "2025-05-31 02:40": {
+    "LTVL": 551570.662532,
+    "TVL_USD": 522977.822084,
+    "TVL_TOKEN": 523052.2158006533,
+    "SHARES": 510973.595591,
+    "PPS": 1.0236384429917225,
+    "VAULT_PNL_SPOT": 12655.606801000016,
+    "FUEL": 2786973
+  },
+  "2025-05-31 02:50": {
+    "LTVL": 551036.432184,
+    "TVL_USD": 523189.468304,
+    "TVL_TOKEN": 523273.5688319827,
+    "SHARES": 510973.595591,
+    "PPS": 1.024071641562528,
+    "VAULT_PNL_SPOT": 12655.606801000016,
+    "FUEL": 2786973
+  },
+  "2025-05-31 03:00": {
+    "LTVL": 550618.694911,
+    "TVL_USD": 523174.77333500003,
+    "TVL_TOKEN": 523259.3477433758,
+    "SHARES": 510973.595591,
+    "PPS": 1.0240438102054295,
+    "VAULT_PNL_SPOT": 12655.606801000016,
+    "FUEL": 2786973
+  },
+  "2025-05-31 03:10": {
+    "LTVL": 550633.91846,
+    "TVL_USD": 523632.653214,
+    "TVL_TOKEN": 523722.08399706334,
+    "SHARES": 510973.595591,
+    "PPS": 1.0249494073980834,
+    "VAULT_PNL_SPOT": 11505.673982999986,
+    "FUEL": 2786973
+  },
+  "2025-05-31 03:20": {
+    "LTVL": 550396.057716,
+    "TVL_USD": 523456.80327100004,
+    "TVL_TOKEN": 523544.1251956414,
+    "SHARES": 510973.595591,
+    "PPS": 1.0246011334305878,
+    "VAULT_PNL_SPOT": 11505.673982999986,
+    "FUEL": 2786973
+  },
+  "2025-05-31 03:30": {
+    "LTVL": 551249.014674,
+    "TVL_USD": 522585.01171,
+    "TVL_TOKEN": 522682.0371765611,
+    "SHARES": 510973.595591,
+    "PPS": 1.022913985549525,
+    "VAULT_PNL_SPOT": 11505.673982999986,
+    "FUEL": 2786973
+  },
+  "2025-05-31 03:40": {
+    "LTVL": 552285.749837,
+    "TVL_USD": 522614.235368,
+    "TVL_TOKEN": 522697.72587575414,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229446890914076,
+    "VAULT_PNL_SPOT": 11197.139831561071,
+    "FUEL": 2786973
+  },
+  "2025-05-31 03:50": {
+    "LTVL": 553361.629478,
+    "TVL_USD": 523355.570363,
+    "TVL_TOKEN": 523450.51381719613,
+    "SHARES": 510973.595591,
+    "PPS": 1.0244179314427493,
+    "VAULT_PNL_SPOT": 11197.139831561071,
+    "FUEL": 2786973
+  },
+  "2025-05-31 04:00": {
+    "LTVL": 553224.265691,
+    "TVL_USD": 523322.515896,
+    "TVL_TOKEN": 523410.0771678095,
+    "SHARES": 510973.595591,
+    "PPS": 1.0243387949673315,
+    "VAULT_PNL_SPOT": 11197.139831561071,
+    "FUEL": 2786973
+  },
+  "2025-05-31 04:10": {
+    "LTVL": 552187.464165,
+    "TVL_USD": 523573.866845,
+    "TVL_TOKEN": 523649.8641497841,
+    "SHARES": 510973.595591,
+    "PPS": 1.0248080696696715,
+    "VAULT_PNL_SPOT": 12420.141181354353,
+    "FUEL": 2786973
+  },
+  "2025-05-31 04:20": {
+    "LTVL": 552050.792812,
+    "TVL_USD": 522636.69525499997,
+    "TVL_TOKEN": 522720.6023660918,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229894594876376,
+    "VAULT_PNL_SPOT": 12420.141181354353,
+    "FUEL": 2786973
+  },
+  "2025-05-31 04:30": {
+    "LTVL": 553540.839868,
+    "TVL_USD": 522770.64889,
+    "TVL_TOKEN": 522863.038788954,
+    "SHARES": 510973.595591,
+    "PPS": 1.0232682144450194,
+    "VAULT_PNL_SPOT": 12420.141181354353,
+    "FUEL": 2786973
+  },
+  "2025-05-31 04:40": {
+    "LTVL": 554253.023454,
+    "TVL_USD": 523139.24348400004,
+    "TVL_TOKEN": 523215.6748297792,
+    "SHARES": 510973.595591,
+    "PPS": 1.0239583402046828,
+    "VAULT_PNL_SPOT": 11173.36430799996,
+    "FUEL": 2786973
+  },
+  "2025-05-31 04:50": {
+    "LTVL": 554743.436386,
+    "TVL_USD": 523275.41394,
+    "TVL_TOKEN": 523383.6235041595,
+    "SHARES": 510973.595591,
+    "PPS": 1.024287023870198,
+    "VAULT_PNL_SPOT": 11173.36430799996,
+    "FUEL": 2786973
+  },
+  "2025-05-31 05:00": {
+    "LTVL": 555006.417612,
+    "TVL_USD": 522956.37861599994,
+    "TVL_TOKEN": 523058.2128194538,
+    "SHARES": 510973.595591,
+    "PPS": 1.0236501794470936,
+    "VAULT_PNL_SPOT": 11173.36430799996,
+    "FUEL": 2786973
+  },
+  "2025-05-31 05:10": {
+    "LTVL": 555136.227224,
+    "TVL_USD": 523513.864451,
+    "TVL_TOKEN": 523594.0424067137,
+    "SHARES": 510973.595591,
+    "PPS": 1.0246988238230132,
+    "VAULT_PNL_SPOT": 11683.35859899997,
+    "FUEL": 2786973
+  },
+  "2025-05-31 05:20": {
+    "LTVL": 554283.479373,
+    "TVL_USD": 523469.297657,
+    "TVL_TOKEN": 523588.04742615623,
+    "SHARES": 510973.595591,
+    "PPS": 1.024687091356582,
+    "VAULT_PNL_SPOT": 11284.487610000011,
+    "FUEL": 2786973
+  },
+  "2025-05-31 05:30": {
+    "LTVL": 554265.064114,
+    "TVL_USD": 523429.25021900004,
+    "TVL_TOKEN": 523540.27740562946,
+    "SHARES": 510973.595591,
+    "PPS": 1.0245936031197358,
+    "VAULT_PNL_SPOT": 11683.35859899997,
+    "FUEL": 2786973
+  },
+  "2025-05-31 05:40": {
+    "LTVL": 554586.501612,
+    "TVL_USD": 523633.48688700004,
+    "TVL_TOKEN": 523741.7233515479,
+    "SHARES": 510973.595591,
+    "PPS": 1.024987842563137,
+    "VAULT_PNL_SPOT": 12162.540955999983,
+    "FUEL": 2786973
+  },
+  "2025-05-31 05:50": {
+    "LTVL": 553861.335812,
+    "TVL_USD": 523417.883447,
+    "TVL_TOKEN": 523492.85809413623,
+    "SHARES": 510973.595591,
+    "PPS": 1.024500801237403,
+    "VAULT_PNL_SPOT": 12162.540955999983,
+    "FUEL": 2786973
+  },
+  "2025-05-31 06:00": {
+    "LTVL": 553433.642755,
+    "TVL_USD": 523490.43739100004,
+    "TVL_TOKEN": 523600.1735153654,
+    "SHARES": 510973.595591,
+    "PPS": 1.024710822698698,
+    "VAULT_PNL_SPOT": 12162.540955999983,
+    "FUEL": 2786973
+  },
+  "2025-05-31 06:10": {
+    "LTVL": 553456.953891,
+    "TVL_USD": 523170.67121,
+    "TVL_TOKEN": 523259.6619807131,
+    "SHARES": 510973.595591,
+    "PPS": 1.024044425183072,
+    "VAULT_PNL_SPOT": 12093.376740197069,
+    "FUEL": 2789145
+  },
+  "2025-05-31 06:20": {
+    "LTVL": 553601.700311,
+    "TVL_USD": 522617.82905899995,
+    "TVL_TOKEN": 522707.78184117697,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229643691013135,
+    "VAULT_PNL_SPOT": 12093.376740197069,
+    "FUEL": 2789145
+  },
+  "2025-05-31 06:30": {
+    "LTVL": 554434.878426,
+    "TVL_USD": 523313.580333,
+    "TVL_TOKEN": 523389.2205431529,
+    "SHARES": 510973.595591,
+    "PPS": 1.0242979775457728,
+    "VAULT_PNL_SPOT": 12093.376740197069,
+    "FUEL": 2789145
+  },
+  "2025-05-31 06:40": {
+    "LTVL": 554698.74116,
+    "TVL_USD": 523103.818147,
+    "TVL_TOKEN": 523171.2078302806,
+    "SHARES": 510973.595591,
+    "PPS": 1.0238713161394821,
+    "VAULT_PNL_SPOT": 11979.120852999971,
+    "FUEL": 2789145
+  },
+  "2025-05-31 06:50": {
+    "LTVL": 554819.746958,
+    "TVL_USD": 523432.204983,
+    "TVL_TOKEN": 523495.61077137664,
+    "SHARES": 510973.595591,
+    "PPS": 1.0245061883596813,
+    "VAULT_PNL_SPOT": 11979.120852999971,
+    "FUEL": 2789145
+  },
+  "2025-05-31 07:00": {
+    "LTVL": 554816.915864,
+    "TVL_USD": 523371.932537,
+    "TVL_TOKEN": 523445.1049282179,
+    "SHARES": 510973.595591,
+    "PPS": 1.0244073459858394,
+    "VAULT_PNL_SPOT": 11979.120852999971,
+    "FUEL": 2789145
+  },
+  "2025-05-31 07:10": {
+    "LTVL": 554557.43688,
+    "TVL_USD": 523517.88859,
+    "TVL_TOKEN": 523604.2047431519,
+    "SHARES": 510973.595591,
+    "PPS": 1.0247187120061325,
+    "VAULT_PNL_SPOT": 12153.383058000007,
+    "FUEL": 2789145
+  },
+  "2025-05-31 07:20": {
+    "LTVL": 553809.092671,
+    "TVL_USD": 523208.673549,
+    "TVL_TOKEN": 523290.89824784163,
+    "SHARES": 510973.595591,
+    "PPS": 1.024105556066151,
+    "VAULT_PNL_SPOT": 12153.383058000007,
+    "FUEL": 2789145
   }
 }
